fix handlers, update sql
