# docs/swagger.json
@@ -70,14 +70,14 @@
                             "type": "string"
                         }
                     },
-                    "400": {
-                        "description": "Bad Request",
+                    "422": {
+                        "description": "Invalid request payload",
                         "schema": {
                             "$ref": "#/definitions/handler.ErrorResponse"
                         }
                     },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "Failed to update person",
                         "schema": {
                             "$ref": "#/definitions/handler.ErrorResponse"
                         }
@@ -109,12 +109,12 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "ID of the created person",
+                        "description": "ID of the created people",
                         "schema": {
                             "type": "integer"
                         }
                     },
-                    "400": {
+                    "422": {
                         "description": "Invalid request payload",
                         "schema": {
                             "$ref": "#/definitions/handler.ErrorResponse"
@@ -208,14 +208,8 @@
                             }
                         }
                     },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/handler.ErrorResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
+                    "422": {
+                        "description": "Failed to fetch people by filter",
                         "schema": {
                             "$ref": "#/definitions/handler.ErrorResponse"
                         }
@@ -259,7 +253,7 @@
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "Failed to fetch person by ID",
                         "schema": {
                             "$ref": "#/definitions/handler.ErrorResponse"
                         }
@@ -300,14 +294,14 @@
                             "type": "string"
                         }
                     },
-                    "400": {
-                        "description": "Bad Request",
+                    "422": {
+                        "description": "Invalid people ID",
                         "schema": {
                             "$ref": "#/definitions/handler.ErrorResponse"
                         }
                     },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "Failed to delete person",
                         "schema": {
                             "$ref": "#/definitions/handler.ErrorResponse"
                         }
@@ -347,7 +341,7 @@
                 }
             },
             "put": {
-                "description": "Update an existing task",
+                "description": "Update an existing task. FORMAT TIME - RFC 3339 \"2024-08-01T08:00:00Z\".",
                 "consumes": [
                     "application/json"
                 ],
@@ -365,7 +359,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entities.Task"
+                            "$ref": "#/definitions/handler.taskUpdate"
                         }
                     }
                 ],
@@ -391,7 +385,7 @@
                 }
             },
             "post": {
-                "description": "Create a new task",
+                "description": "Create a new task. FORMAT TIME - RFC 3339 \"2024-08-01T08:00:00Z\".",
                 "consumes": [
                     "application/json"
                 ],
@@ -403,13 +397,6 @@
                 ],
                 "summary": "Create Task",
                 "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "People ID",
-                        "name": "people_id",
-                        "in": "query",
-                        "required": true
-                    },
                     {
                         "description": "Task to create",
                         "name": "task",
@@ -457,18 +444,13 @@
                 "summary": "Update People in Task",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "Task ID",
-                        "name": "task_id",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "People ID",
-                        "name": "people_id",
-                        "in": "query",
-                        "required": true
+                        "description": "People and task to update",
+                        "name": "task",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.PeopleAndTask"
+                        }
                     }
                 ],
                 "responses": {
@@ -700,7 +682,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entities.Task"
+                            "$ref": "#/definitions/handler.timeTask"
                         }
                     }
                 ],
@@ -822,6 +804,42 @@
             "properties": {
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "handler.PeopleAndTask": {
+            "type": "object",
+            "properties": {
+                "peopleID": {
+                    "type": "integer"
+                },
+                "taskID": {
+                    "type": "integer"
+                }
+            }
+        },
+        "handler.taskUpdate": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "task_id": {
+                    "type": "integer"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "handler.timeTask": {
+            "type": "object",
+            "properties": {
+                "start_time": {
+                    "type": "string"
+                },
+                "task_id": {
+                    "type": "integer"
                 }
             }
         }
